Added compiled file for github page

--- a/package.json
+++ b/package.json
@@ -2,12 +2,16 @@
   "devDependencies": {
     "browser-sync": "^3.0.2",
     "gulp": "^5.0.0",
+    "gulp-clean-css": "^4.3.0",
     "gulp-concat": "^2.6.1",
     "gulp-htmlmin": "^5.0.1",
     "gulp-inline-source": "^4.0.0",
-    "gulp-terser": "^2.1.0"
+    "gulp-replace": "^1.1.4",
+    "gulp-terser": "^2.1.0",
+    "pngjs": "^7.0.0"
   },
   "dependencies": {
-    "archiver": "^7.0.1"
+    "archiver": "^7.0.1",
+    "jsfxr": "^1.2.2"
   }
 }
